--- a/ansible/roles/dbadmin/tasks/main.yaml
+++ b/ansible/roles/dbadmin/tasks/main.yaml
@@ -74,6 +74,14 @@
   with_items: "{{ mysql_servers }}"
   tags: conf
 
+- name: Correct fastcgi_params path if dbm_install_dependency == 0
+  lineinfile:
+    dest: "{{ nginx_conf_file }}"
+    state: present
+    regexp: '^include '
+    line: 'include {{ nginx_install_dir }}/conf/fastcgi_params'
+  when: dbm_install_dependency == 0
+
 - name: restart and enable nginx
   systemd: name=nginx.service enabled=yes daemon_reload=yes state=restarted
   when:
