--- a/ansible/roles/dbadmin/tasks/main.yaml
+++ b/ansible/roles/dbadmin/tasks/main.yaml
@@ -79,7 +79,7 @@
     dest: "{{ nginx_conf_file }}"
     state: present
     regexp: '^      include '
-    line: '      include {{ nginx_install_dir }}/conf/fastcgi_params'
+    line: '      include {{ nginx_install_dir }}/conf/fastcgi_params;'
   when: dbm_install_dependency == 0
 
 - name: restart and enable nginx
