--- a/ansible/roles/phpmyadmin/tasks/main.yaml
+++ b/ansible/roles/phpmyadmin/tasks/main.yaml
@@ -86,7 +86,7 @@
     state: present
     regexp: '^      include '
     line: '      include {{ phpmyadmin_install_dir }}/conf/fastcgi_params;'
-  when: dbm_install_dependency == 0
+  when: pma_install_dependency == 0
 
 - name: restart and enable nginx
   systemd: name=nginx.service enabled=yes daemon_reload=yes state=restarted
