--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -50,7 +50,7 @@ inventory      = /etc/ansible/inventories/staging/hosts.yaml
 # with a maximum timeout of 10 seconds. This
 # option lets you increase or decrease that
 # timeout to something more suitable for the
-# environment. 
+# environment.
 # gather_timeout = 10
 
 # additional paths to search for roles in, colon separated
@@ -83,6 +83,7 @@ host_key_checking = False
 
 # SSH timeout
 #timeout = 10
+timeout = 60
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
