--- a/ansible/roles/monitoring/defaults/main.yaml
+++ b/ansible/roles/monitoring/defaults/main.yaml
@@ -1,2 +1,7 @@
 monitor_what: replication
 is_monitor_replication: 0
+checker_name: "{{ vault_monitoring_default_checker_name }}"
+checker_passwd: "{{ vault_monitoring_default_checker_passwd }}"
+checker_port: 3306
+checker_host: localhost
+monitor_port: 9302
