--- a/ansible/inventories/staging/group_vars/test_mariadb/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_mariadb/vars.yaml
@@ -1,5 +1,5 @@
-mariadb_base_version: 10.0
-mariadb_version: 10.0.21
+mariadb_base_version: "10.1"
+mariadb_version: "10.1.21"
 
 mariadb_datadir: /var/lib/mysql
 mariadb_datadir_base: /data
