--- a/ansible/inventories/staging/group_vars/test_mariadb_galera_cluster/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test_mariadb_galera_cluster/vars.yaml
@@ -25,8 +25,8 @@ mag_galera_name: "{{ vault_mag_default_galera_name }}"
 mag_galera_passwd: "{{ vault_mag_default_galera_passwd }}"
 mag_galera_priv: "{{ vault_mag_default_galera_priv }}"
 
-mariadb_base_version: 10.0
-mariadb_version: 10.0.21
+mariadb_base_version: "10.1"
+mariadb_version: "10.1.21"
 
 mariadb_datadir: /var/lib/mysql
 mariadb_datadir_base: /data
