--- a/ansible/roles/mongodb_single/defaults/main.yaml
+++ b/ansible/roles/mongodb_single/defaults/main.yaml
@@ -1,6 +1,28 @@
-default_mongodb_port: 27017
-default_mongodb_version: 3
+mongo_version: 3
 
-default_mongodb_root_passwd: "{{ vault_mongodb_root_passwd }}"
-default_mongodb_admin_passwd: "{{ vault_mongodb_admin_passwd }}"
-default_mongodb_dumper_passwd: "{{ vault_mongodb_dumper_passwd }}"
+mongo_systemLog_path: /var/log/mongodb/mongod.log
+mongo_storage_dbPath: /var/lib/mongo
+mongo_processManagement_pidFilePath: /var/run/mongodb/mongod.pid
+mongo_net_port: 27017
+mongo_net_bindIp: "0.0.0.0"
+mongo_secutiry_authorization: "enabled"
+mongo_setParameter_enableLocalhostAuthBypass: 0
+
+sysctl_vm_swappiness: 10
+
+### first, disable security and enable localhost auth bypass then revert these options.
+mongo_users:
+  - name: "{{ vault_mongodb_root_user }}"
+    passwd: "{{ vault_mongodb_root_passwd }}"
+    roles: "{{ vault_mongodb_root_roles }}"
+    db: "{{ vault_mongodb_root_db }}"
+
+  - name: "{{ vault_mongodb_admin_user }}"
+    passwd: "{{ vault_mongodb_admin_passwd }}"
+    roles: "{{ vault_mongodb_admin_roles }}"
+    db: "{{ vault_mongodb_admin_db }}"
+
+  - name: "{{ vault_mongodb_dumper_user }}"
+    passwd: "{{ vault_mongodb_dumper_passwd }}"
+    roles: "{{ vault_mongodb_dumper_roles }}"
+    db: "{{ vault_mongodb_dumper_db }}"
